[gd_scene load_steps=5 format=3 uid="uid://c7k4wjn3hrir4"]

[ext_resource type="Script" uid="uid://cf5vpqnbdqhgd" path="res://property_card.gd" id="1_o78vb"]
[ext_resource type="Texture2D" uid="uid://417x86cg62u0" path="res://thumbnail_special tile.png" id="2_y4p7u"]
[ext_resource type="Texture2D" uid="uid://da21hr6rmx1i2" path="res://randomcolour.png" id="3_fau1o"]
[ext_resource type="FontFile" uid="uid://bjmijbducrgmq" path="res://SpaceMono-Bold.ttf" id="4_ifpov"]

[node name="PropertyCard" type="Node2D"]
position = Vector2(1, -2)
script = ExtResource("1_o78vb")

[node name="BaseCardSprite" type="Sprite2D" parent="."]
position = Vector2(5, -63)
scale = Vector2(0.962438, 0.59233)
texture = ExtResource("2_y4p7u")

[node name="PropertyDisplay" type="Node2D" parent="."]

[node name="PropertyColour" type="Sprite2D" parent="PropertyDisplay"]
position = Vector2(2, -95)
scale = Vector2(0.6325, 0.5725)
texture = ExtResource("3_fau1o")

[node name="PropertyLabel" type="Label" parent="PropertyDisplay"]
offset_left = -87.0
offset_top = -113.0
offset_right = 96.0
offset_bottom = -48.0
theme_override_colors/font_color = Color(0.43612, 0.530014, 0.749511, 1)
theme_override_fonts/font = ExtResource("4_ifpov")
text = "Property Name"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="PropertyCost" type="Label" parent="PropertyDisplay"]
offset_left = -96.0
offset_top = -72.0
offset_right = 95.0
offset_bottom = -20.0
theme_override_colors/font_color = Color(0.435294, 0.529412, 0.74902, 1)
theme_override_fonts/font = ExtResource("4_ifpov")
text = "Cost"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="BuyButton" type="Button" parent="PropertyDisplay"]
offset_left = -20.0
offset_top = -19.0
offset_right = 30.0
offset_bottom = 12.0
text = "Close
"
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="PropertyDisplay/BuyButton" to="." method="_on_buy_button_pressed"]
